--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@test-org-cli/test-cliper",
+	"name": "test-anyshell",
 	"version": "0.1.0",
 	"bin": "./dist/index.js",
 	"type": "module",
