--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"ink-spinner": "^5.0.0",
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
-		"shelljs": "^0.8.5"
+		"shelljs": "^0.8.5",
+		"yaml": "^2.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.3",
